<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="#B0BEC5"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="32dp"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:background="#90A4AE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/nombre"/>
            <EditText
                android:id="@+id/nombre"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:background="#90A4AE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/apellido"/>
            <EditText
                android:id="@+id/apellido"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:paddingBottom="16dp"
            android:background="#90A4AE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/id"/>
            <EditText
                android:id="@+id/ident"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"/>
        </LinearLayout>

        <TextView
            android:paddingTop="32dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fem"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/fem"/>
            <RadioButton
                android:id="@+id/masc"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/masculino"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#90A4AE"
            android:orientation="horizontal">

            <TextView
                android:paddingTop="32dp"
                android:paddingLeft="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/fecha"/>



        </LinearLayout>

        <DatePicker
            
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </DatePicker>


        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_height="wrap_content"
            android:background="#90A4AE"
            android:orientation="horizontal">

            <TextView
                android:paddingLeft="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dia"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mes"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/año"/>
        </LinearLayout>

        <TextView
            android:paddingTop="32dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar"/>

        <Spinner
            android:layout_marginRight="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ciudades"
            android:entries="@array/cities">
        </Spinner>

        <TextView
            android:background="#90A4AE"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hob"/>

        <LinearLayout
            android:background="#90A4AE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/music"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/music"/>
            <CheckBox
                android:id="@+id/sport"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dep"/>
        </LinearLayout>

        <LinearLayout
            android:background="#90A4AE"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/art"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/artes"/>
            <CheckBox
                android:id="@+id/read"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/lect"/>
        </LinearLayout>

        <Button
            android:id="@+id/boton"
            android:layout_marginTop="32dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alm"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:textSize="20sp"
            android:text="@string/resu"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombreout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidoout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/identout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sexoout"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/diaout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/mesout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/añoout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lugarout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hobbyout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hobby1out"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hobby2out"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hobby3out"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hobby4out"/>

    </LinearLayout>
</ScrollView>

